# my_arr_math

./: Cargo.toml
src/: lib.rs
